# OperatorLearning

./: .gitignore  README.md  main.py  pyproject.toml
config/: burgers_config.py
neuralop/layers/: fno_block.py
neuralop/layers/tests/: test_fourier_continuation.py
neuralop/models/: __init__.py  fno.py
neuralop/training/: __init__.py  torch_setup.py  trainer.py
scripts/: train_burgers.py
